public/styles.css
* {
    padding: 2px;
    margin: 2px;
    text-align: center;
}

h1, a {
    color: cornflowerblue;
}

.rest-rants {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
}

img {
    max-width: 75%;
}

.rest-rant-pic {
    max-width: 50%;
}

